
== Changelog ==

= 🌀 Animation Addons for Elementor v2.5.3 – 1st February 2026

  - **Feature:** Add WPML Support for All Widgets.
  - **Feature:** Add None Option of Ease Field at Animation Extension section.

= 🌀 Animation Addons for Elementor v2.5.2 – 26 January 2026

  - **Updated:** Extensions Icons
  - **Fixed:** Filterable Slider issue

= 🌀 Animation Addons for Elementor v2.5.1 – 19 January 2026

  - **Fix:** ScrollSmoother saving issue


= 🌀 Animation Addons for Elementor v2.5.0 – 18 January 2026

  - **Fix:** Dashboard RTL issues
  - **Fix:** Korean Language design load issue
  - **Fix:** ThemeBuilder Specific page search issue
  - **Added:** ScrollSmoother responsive Controls
  - **Added:** Animated Heading Color Mode

= 🌀 Animation Addons for Elementor v2.4.9 – 04 Jan 2026

  - **Fix:** Stacking Card Url 
  - **Fix:** Dynamic Tag for taxonomy page

= 🌀 Animation Addons for Elementor v2.4.8 – 21 December 2025

  - **Fix:** ThemeBuilder slug and id while import demo
  - **Fix:** Add Dynamic Tag support in several widgets

= 🌀 Animation Addons for Elementor v2.4.7 – 08 Dec 2025

- **Fix: Animation Markup Control**  
  Resolved an issue where animation markup controls were not rendering correctly, ensuring smoother and more consistent animation behavior.

- **Fix: Theme Builder – Header/Footer Condition**  
  Improved the trigger logic so header and footer conditions now work properly across all layouts.

= 🌀 Animation Addons for Elementor v2.4.6 – 01 Dec 2025

   - **Fix: Widget** - Loop grid style
   - **Fix: Widget** - Youtube video
   - **Fix: Widget** - Grid hover post responsive

= 🌀 Animation Addons for Elementor v2.4.5 – 19 November 2025

  - **Feature:** Add new widget Loop Builder
  - **Feature:** Add Dynamic Tag support in several widgets
  - **Feature:** Add new controls in several widgets
  - **Feature:** Add Current template Names in admin bar
  - **Feature:** Add new Tag support in Extension Code Snippet HTML Editor