@@ -5,7 +5,7 @@ on:
   push:
     branches: ["master", "main"]
   schedule:
-    - cron: '35 1 * * *'
+    - cron: '29 4 * * *'
 
 jobs:
   semgrep:
